# burhan_research

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: env.example  llm.example.yaml
docs/: 00_DOC_INDEX.md  01_CONCEPT.md  02_REQUIREMENTS.md  03_ARCHITECTURE.md  04_ENVIRONMENT_AND_STACK.md  08_BUILD_SPEC.md  10_PROJECT_PLAN.md  11_CERTIFICATION_PLAN.md  12_DBA_VALIDATION_PROTOCOL.md  15_ENGINEERING_STANDARDS.md  DEFERRED_FOLLOWUPS.md
docs/09_task_contracts/: 00_README.md  SIGNOFFS.md  TC-01.md  TC-02.md  TC-03.md  TC-04.md  TC-05.md  TC-06.md  TC-07.md  TC-08a.md  TC-08b.md  TC-08c.md  TC-09.md  TC-10a.md  TC-10b.md  TC-11a.md  TC-11b.md  TC-12.md  TC-13.md  TC-14.md  TC-15.md  TC-15_PLAN.md  TC-16.md  TC-16_PLAN.md  TC-18.md  TC-18_PLAN.md  TC-19.md  TC-19_PLAN.md  TC-20.md  TC-20_PLAN.md
docs/certification/: CERTIFICATION_REPORT.md
playbooks/: CB_SEM_PLAYBOOK_v1.0.yaml  PLAYBOOK_SCHEMA.md  playbook.schema.yaml
policy/: decision_policy.schema.yaml  decision_policy.template.yaml  protected_decisions.registry.yaml  protected_registry.schema.yaml
prompts/node_a/: v1.md
prompts/node_c/: v1_gate1.md  v1_gate2.md
schemas/: 00_README.md  decision_log.schema.json  provenance_log.schema.json  reference_comparison.schema.json  results_store.schema.json  run_manifest.schema.json  study_config.example.yaml  study_config.schema.yaml
src/burhan/: __init__.py
tests/: conftest.py
tests/benchmark/: parity_map.json  runner.py  test_runner.py
tests/fixtures/: stub_nodes.py
tests/golden/: DEFECT_MATRIX.md  (+3 more)
(+205 files in other folders)
