[project]
name = "burhan"
version = "0.1.0"
description = "Burhan - autonomous research analysis engine (Phase 1: CB-SEM v1 Core Release)"
requires-python = "==3.12.*"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "jsonschema>=4.22",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "pyarrow>=16",
  "semopy>=2.3",
  "statsmodels>=0.14",
  "pingouin>=0.5",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "anthropic>=0.30",
  "openai>=1.30",
]

[project.scripts]
# TC-04 researcher-authorized minimal edit: expose the CLI (FR-1401).
burhan = "burhan.cli:app"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "pre-commit>=3.7"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
# uv's native backend: uv builds it in-process; no third-party backend package.
requires = ["uv_build>=0.6,<1.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "burhan"
module-root = "src"
